RESOLVED FIXED 120847
[Qt] REGRESSION(r155140) Pixel tests is still broken on Qt with QT_WEBKIT_DISABLE_UIPROCESS_DUMPPIXELS=1
https://bugs.webkit.org/show_bug.cgi?id=120847
Summary [Qt] REGRESSION(r155140) Pixel tests is still broken on Qt with QT_WEBKIT_DIS...
Gábor Ábrahám
Reported 2013-09-06 03:55:20 PDT
The whole force repaint code should be in if (PlatformWebView::windowShapshotEnabled()) block, as the previous Qt implementation.
Attachments
proposed fix (5.09 KB, patch)
2013-09-06 05:51 PDT, Gábor Ábrahám
no flags
Gábor Ábrahám
Comment 1 2013-09-06 05:51:43 PDT
Created attachment 210723 [details] proposed fix
Csaba Osztrogonác
Comment 2 2013-09-06 05:59:59 PDT
Comment on attachment 210723 [details] proposed fix LGTM, r=me.
Csaba Osztrogonác
Comment 3 2013-09-06 06:32:04 PDT
Comment on attachment 210723 [details] proposed fix Clearing flags on attachment: 210723 Committed r155188: <http://trac.webkit.org/changeset/155188>
Csaba Osztrogonác
Comment 4 2013-09-06 06:32:09 PDT
All reviewed patches have been landed. Closing bug.
WebKit Commit Bot
Comment 5 2013-09-06 06:34:54 PDT
The commit-queue encountered the following flaky tests while processing attachment 210723 [details]: http/tests/inspector/inspect-element.html bug 78869 (author: pfeldman@chromium.org) ietestcenter/css3/grid/grid-column-002.htm bug 120851 (authors: dtharp@codeaurora.org, jchaffraix@webkit.org, and mrobinson@webkit.org) ietestcenter/css3/multicolumn/column-width-applies-to-004.htm bug 120852 (author: dtharp@codeaurora.org) ietestcenter/css3/multicolumn/column-width-applies-to-014.htm bug 120853 (author: dtharp@codeaurora.org) ietestcenter/css3/multicolumn/column-containing-block-003.htm bug 120854 (author: dtharp@codeaurora.org) ietestcenter/css3/multicolumn/column-width-applies-to-003.htm bug 120855 (author: dtharp@codeaurora.org) ietestcenter/css3/multicolumn/column-width-applies-to-002.htm bug 120856 (author: dtharp@codeaurora.org) ietestcenter/css3/multicolumn/column-width-applies-to-013.htm bug 120857 (author: dtharp@codeaurora.org) ietestcenter/css3/multicolumn/column-width-applies-to-001.htm bug 120858 (author: dtharp@codeaurora.org) ietestcenter/css3/multicolumn/column-block-formatting-context-001.htm bug 120859 (author: dtharp@codeaurora.org) fast/regions/counters/extract-list-items-006.html bug 120736 (author: abucur@adobe.com) fast/regions/counters/extract-list-items-015.html bug 120737 (author: abucur@adobe.com) fast/regions/counters/extract-numbered-paragraphs-divs-002.html bug 120738 (author: abucur@adobe.com) fast/regions/counters/extract-list-items-003.html bug 120739 (author: abucur@adobe.com) fast/regions/counters/extract-list-items-001.html bug 120740 (author: abucur@adobe.com) fast/regions/counters/extract-list-items-013.html bug 120741 (author: abucur@adobe.com) fast/regions/counters/extract-list-items-014.html bug 120742 (author: abucur@adobe.com) fast/shapes/shape-outside-floats/shape-outside-floats-image-002.html bug 120753 (author: giles_joplin@yahoo.com) fast/shapes/shape-outside-floats/shape-outside-floats-image-001.html bug 120754 (author: giles_joplin@yahoo.com) fast/multicol/newmulticol/float-paginate.html bug 120744 (author: hyatt@apple.com) fast/multicol/newmulticol/columns-shorthand-parsing.html bug 120745 fast/multicol/newmulticol/float-paginate-complex.html bug 120746 (author: hyatt@apple.com) fast/multicol/newmulticol/direct-child-column-span-all.html bug 120747 (author: mmaerean@adobe.com) fast/multicol/newmulticol/column-rules-fixed-height.html bug 120748 (author: hyatt@apple.com) fast/multicol/newmulticol/positioned-split.html bug 120749 (author: hyatt@apple.com) fast/multicol/newmulticol/layers-in-multicol.html bug 120750 (author: hyatt@apple.com) fast/multicol/newmulticol/positioned-with-constrained-height.html bug 120751 (author: hyatt@apple.com) loader/go-back-to-different-window-size.html bug 114274 (authors: adachan@apple.com and rniwa@webkit.org) svg/text/add-tspan-position-bug.html bug 120860 (authors: fmalita@chromium.org and zimmermann@kde.org) animations/cross-fade-background-image.html bug 120755 (authors: krit@webkit.org and thorton@apple.com) The commit-queue is continuing to process your patch.
Note You need to log in before you can comment on or make changes to this bug.